# demoapp

./: .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  README.md
app/: CMakeLists.txt  demoapp.h  main.cpp
test/: CMakeLists.txt  demoapp_test.cpp  main.cpp
